<resources>
    <string name="app_name">悦款</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main">款式</string>
    <string name="two">现货</string>
    <string name="mine">我的</string>
    <string name="fasionAI">FASION.AI</string>
    <string name="loading">加载中…</string>
    <string name="receiver_key">收货人</string>
    <string name="receiver_hint">请填写收货人姓名</string>
    <string name="number86">+86</string>
    <string name="phone_key">联系电话</string>
    <string name="phone_hint">请填写收货人手机号码</string>
    <string name="select_address_key">选择地区</string>
    <string name="select_address_hint">请选择收件地址（省、市、区）</string>
    <string name="address_info_key">详细地址</string>
    <string name="address_info_hint">例如街道、门牌号、小区、楼栋号、单元室等</string>
    <string name="position">定位</string>
    <string name="left">/</string>
    <string name="recommend_en">Recommend</string>
    <string name="recommend_zh">今日推荐</string>
    <string name="every_period_zh">每期精选</string>
    <string name="design_en">Design</string>
    <string name="design_zh">款式合集</string>
    <string name="more">more</string>
    <string name="filter">筛选</string>
    <string name="pinlei">品类</string>
    <string name="login_title">手机号登录</string>
    <string name="mobile_key">手机号</string>
    <string name="login_title2">新用户验证后自动注册</string>
    <string name="login_hint">请输入11位手机号码</string>
    <string name="login_next">下一步</string>
    <string name="login_agreement">登录即代表你已同意</string>
    <string name="login_agreement1"><u>用户协议</u></string>
    <string name="login_agreement2"><u>隐私政策</u></string>
    <string name="weChart">微信</string>
    <string name="weBo">微博</string>
    <string name="friends">朋友圈</string>
    <string name="cancel">取消</string>
    <string name="demo_production">打样生产</string>
    <string name="buy">购买</string>
    <string name="details">详情</string>
    <string name="recommended_to_you">为你推荐</string>
    <string name="and">和</string>
    <string name="input_code">输入验证码</string>
    <string name="resend">重新发送</string>
    <string name="no_internet">网络不给力…</string>
    <string name="btn_retry">点击重试</string>
    <string name="empty">暂无内容</string>
    <string name="empty_search">暂无内容\n换个词搜搜看吧</string>
    <string name="reset">重置</string>
    <string name="sure">确定</string>
    <string name="edit_information">编辑资料</string>
    <string name="my_like">我的喜欢</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="comma">、</string>
    <string name="toolbar">工具栏</string>
    <string name="mine_agreement1">用户协议</string>
    <string name="mine_agreement2">隐私政策</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="quit">确定要退出吗？</string>
    <string name="quit1">退出</string>
    <string name="search_hint">输入你要搜索的款式</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清除</string>
    <string name="clearHistoryAll">确定要清除所有历史吗？</string>
    <string name="problem_desc">问题描述</string>
    <string name="problem_desc_hint">具体清晰地描述问题，有助于我们快速解决</string>
    <string name="problem_phone_hint">建议填写手机号，方便我们更快速联系您</string>
    <string name="contact_key">联系方式(微信、手机号）</string>
    <string name="the_public">关注官方公众号“FASION.AI”，后台发送需要解决的问题，我们将及时为您解决！</string>
    <string name="sure_edit">确定修改</string>
    <string name="company_url_key">官网地址</string>
    <string name="company_email_key">服务邮箱</string>
    <string name="company_name_key">公司名称</string>
    <string name="editing_name_key">输入要修改的昵称</string>
    <string name="editing_name_hint">请输入1-10个字符的昵称</string>
    <string name="nickName_key">昵称</string>
    <string name="nickName_input_key">起一个个性的名字吧~</string>
    <string name="editing_img_key">选择要修改的头像</string>
    <string name="head_key">头像</string>
    <string name="new_in">New In</string>
    <string name="chunk"> HOT 最热门款式合集</string>
    <string name="top_list">TOP LIST</string>
    <string name="suit_style">高级西装搭配</string>
    <string name="please_login">请登录</string>
    <string name="_86">+86</string>
    <string name="submit">提交</string>
    <string name="privacyAndProtocol">个人信息保护指引</string>

    <string name="pageviews">浏览量：%d</string>
    <string name="labels">#%1$s&#160;&#160;</string>
    <string name="input_code_num">短信验证码已发送至%s</string>
    <string name="like_num">喜欢&#160;&#160;%d</string>
    <string name="second">%ds</string>

    <string name="select_from_album">从相册选择</string>
    <string name="view_larger_image">查看大图</string>
    <string name="Photograph">拍照</string>
    <!--<![CDATA[<b><font color=#0000FF>Hello world!</font></b>]]>-->
    <string name="private_dialog_info_1">感谢您信任并使用"悦款"APP,在开始使用之前，请您务必审慎阅读、充分理解“用户服务协议”和“隐私政策”各条款，包括但不限于下载、安装、注册、登录、使用等方面所订立的相关权利义务规范。本服务条款对用户和“悦款”均具有法律效力。本协议连同所有更新材料、补充条款以及“悦款”的其他规则和政策共同构成了用户与“悦款”之间的协议。</string>
    <string name="private_dialog_info_2">您可阅读完整版</string>
    <string name="private_dialog_info_3">《用户协议》</string>
    <string name="private_dialog_info_4">《隐私政策》</string>
    <string name="private_dialog_info_5">了解详细信息。如您同意，请点击同意开始接受我们的产品和服务，我们依法全力保护您的个人信息安全。</string>
    <string name="company_name">北京智美源素科技有限公司</string>
    <string name="agree">同意</string>
    <string name="no_agree">不同意</string>
    <string name="back_home">回到首页</string>
</resources>