<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_3D000"
    android:orientation="vertical">
    <!--启动页的隐私政策告知-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp">

            <TextView
                android:id="@+id/dialogPrivacy_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="12dp"
                android:text="@string/privacyAndProtocol"
                android:textColor="@color/color_111111"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialogPrivacy_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_dialog_info_1"
                android:textColor="@color/color_111111"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogPrivacy_tv1" />

            <TextView
                android:id="@+id/dialogPrivacy_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_dialog_info_2"
                android:textColor="@color/color_111111"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogPrivacy_tv2" />

            <TextView
                android:id="@+id/dialogPrivacy_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_dialog_info_3"
                android:textColor="@color/color_CC001E"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@+id/dialogPrivacy_tv3"
                app:layout_constraintTop_toTopOf="@+id/dialogPrivacy_tv3" />

            <TextView
                android:id="@+id/dialogPrivacy_tvCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"
                android:textColor="@color/color_111111"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@+id/dialogPrivacy_tv4"
                app:layout_constraintTop_toTopOf="@+id/dialogPrivacy_tv3" />

            <TextView
                android:id="@+id/dialogPrivacy_tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_dialog_info_4"
                android:textColor="@color/color_CC001E"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@+id/dialogPrivacy_tvCircle"
                app:layout_constraintTop_toTopOf="@+id/dialogPrivacy_tv3" />

            <TextView
                android:id="@+id/dialogPrivacy_tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_dialog_info_5"
                android:textColor="@color/color_111111"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogPrivacy_tv3" />

            <LinearLayout
                android:id="@+id/dialogPrivacy_ll1"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/dialogPrivacy_tv6"
                tools:layout_editor_absoluteX="18dp">

                <TextView
                    android:id="@+id/dialogPrivacy_tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_eeeeee_6"
                    android:gravity="center"
                    android:text="@string/no_agree"
                    android:textColor="@color/color_787878"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dialogPrivacy_tvSure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_111111_6"
                    android:gravity="center"
                    android:text="@string/agree"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="26dp"
                app:layout_constraintTop_toBottomOf="@+id/dialogPrivacy_ll1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>