<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MineFragment">

    <View
        android:id="@+id/mine_view1"
        android:layout_width="70dp"
        android:layout_height="160dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mine_view2"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/shape_f7f7f7_bottom_left_50"
        app:layout_constraintLeft_toRightOf="@+id/mine_view1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="84dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/no_login_pic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mine_editData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/mine_tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_login"
                android:textColor="@color/color_111111"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mine_tvEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/edit_information"
                android:textColor="@color/color_787878"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mine_tvName"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mine_myFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mine_tvLikeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/color_CC001E"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/my_like"
                android:textColor="@color/color_787878"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mine_tvLikeNum" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/mine_tvToolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/toolbar"
        android:textColor="@color/color_111111"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mine_view1" />

    <android.widget.Space
        android:id="@+id/mine_space1"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/mine_tvToolBar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mine_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mine_space1">

        <TextView
            android:id="@+id/mine_tvProtocol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3.5dp"
            android:gravity="center"
            android:text="@string/mine_agreement1"
            android:textColor="@color/color_111111"
            android:textSize="12sp"
            app:drawableTopCompat="@mipmap/icon_seting1" />

        <TextView
            android:id="@+id/mine_tvPrivacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3.5dp"
            android:gravity="center"
            android:text="@string/mine_agreement2"
            android:textColor="@color/color_111111"
            android:textSize="12sp"
            app:drawableTopCompat="@mipmap/icon_seting2" />

        <TextView
            android:id="@+id/mine_tvAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3.5dp"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/color_111111"
            android:textSize="12sp"
            app:drawableTopCompat="@mipmap/icon_seting3" />

        <TextView
            android:id="@+id/mine_tvFeedbacks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3.5dp"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@color/color_111111"
            android:textSize="12sp"
            app:drawableTopCompat="@mipmap/icon_seting4" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/mine_tvLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:drawablePadding="3.5dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/color_111111"
        android:textSize="12sp"
        android:visibility="invisible"
        app:drawableTopCompat="@mipmap/icon_seting5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mine_ll1"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>