<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toolbar.FeedBacksActivity">

    <include
        android:id="@+id/feedBacks_title"
        layout="@layout/include_title" />

    <TextView
        android:id="@+id/feedBacks_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/problem_desc"
        android:textColor="@color/color_111111"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedBacks_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/feedBacks_cardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="14dp"
        app:cardBackgroundColor="@color/color_F7F7F7"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/feedBacks_tv1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/feedBacks_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/problem_desc_hint"
            android:padding="12dp"
            android:textColor="@color/color_111111"
            android:textColorHint="@color/color_787878"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/feedBacks_tvContactKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/contact_key"
        android:textColor="@color/color_111111"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedBacks_cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/feedBacks_cardView2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="14dp"
        app:cardBackgroundColor="@color/color_F7F7F7"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/feedBacks_tvContactKey">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/feedBacks_etPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/problem_phone_hint"
            android:padding="12dp"
            android:textColor="@color/color_111111"
            android:textColorHint="@color/color_787878"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/the_public"
        android:textColor="@color/color_787878"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedBacks_cardView2" />

    <TextView
        android:id="@+id/feedBacks_tvSubmit"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.4"
        android:background="@drawable/shape_111111_2"
        android:gravity="center"
        android:text="@string/sure_edit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>