<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    tools:context=".mine.userInfo.EditNickNameActivity">

    <View
        android:id="@+id/editNickName_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_3D000"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F2F2F2"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/editNickName_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickName_key"
            android:textColor="@color/color_4A4A4A"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editNickName_etContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/nickName_input_key"
                android:maxLength="15"
                android:paddingTop="20dp"
                android:paddingBottom="71dp"
                android:singleLine="true"
                android:textColor="@color/color_4A4A4A"
                android:textColorHint="@color/color_999999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/editNickName_tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="15dp"
                android:text="@string/sure"
                android:textColor="@color/color_999999"
                android:textSize="15sp" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>